stop links from wrapping

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -208,6 +208,7 @@ p a:before {
 
    width: 100%;
    height: 2px;
+   white-space:nowrap; 
 
    content: "";
    -webkit-transition: all 0.3s ease-in-out 0s;
